force-app/main/default/objects/FlexiChk__Checklist_Template__c/FlexiChk__Checklist_Template__c.object-meta.xml
<CustomObject>
    <label>Checklist Template</label>
    <nameField>
        <displayFormat>TEMPL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>