force-app/main/default/objects/FlexiChk__Checklist_Template__c/fields/FlexiChk__API_Name__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__API_Name__c</fullName>
    <label>API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>