force-app/main/default/objects/FlexiChk__Checklist_Template__c/fields/FlexiChk__Approver__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To whom the approval request is sent to.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>