force-app/main/default/objects/FlexiChk__Checklist_Template__c/fields/FlexiChk__Archieved__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Archieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archieved</label>
    <type>Checkbox</type>
</CustomField>