force-app/main/default/objects/FlexiChk__Checklist_Template__c/fields/FlexiChk__Assigned_Object__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Assigned_Object__c</fullName>
    <description>The object where the Checklist will be initiated to.</description>
    <label>Assigned Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>