force-app/main/default/objects/FlexiChk__Checklist_Template__c/fields/FlexiChk__Checklist_Status_Change_Alert__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Checklist_Status_Change_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Status Change Alert</label>
    <type>Checkbox</type>
</CustomField>