force-app/main/default/objects/FlexiChk__Checklist_Template__c/fields/FlexiChk__Enable_Approval__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Enable_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this should enable the Approval Process for this Checklist</description>
    <label>Enable Approval</label>
    <type>Checkbox</type>
</CustomField>