force-app/main/default/objects/FlexiChk__Checklist_Template__c/fields/FlexiChk__Item_Count__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Item_Count__c</fullName>
    <label>Item Count</label>
    <summaryForeignKey>FlexiChk__Checklist_Section_Template__c.FlexiChk__Checklist_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>