force-app/main/default/objects/FlexiChk__Checklist_Template__c/fields/FlexiChk__Title__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>