force-app/main/default/objects/FlexiChk__Checklist_Template__c/validationRules/FlexiChk__Enable_Approver_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FlexiChk__Enable_Approver_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( FlexiChk__Enable_Approval__c , ISBLANK( FlexiChk__Approver__c ))</errorConditionFormula>
    <errorDisplayField>FlexiChk__Approver__c</errorDisplayField>
    <errorMessage>Choose Approver if Enable Approver is Selected</errorMessage>
</ValidationRule>