force-app/main/default/objects/FlexiChk__Checklist_Template__c/validationRules/FlexiChk__Object_Assignment_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FlexiChk__Object_Assignment_Validation</fullName>
    <active>true</active>
    <description>The validation rule checks that the &quot;Active&quot; checkbox is TRUE, and the rule also checks that the &quot;Object Assignment&quot; field is NOT blank.</description>
    <errorConditionFormula>AND( FlexiChk__Active__c  = TRUE, ISBLANK( FlexiChk__Assigned_Object__c ) )</errorConditionFormula>
    <errorMessage>You cannot activate this record without providing an Object Assignment. Please assign an object before activating this record</errorMessage>
</ValidationRule>